--- a/package.json
+++ b/package.json
@@ -27,19 +27,22 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "google-auth-library": "^6.1.3",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^7.8.3",
     "nodemon": "^3.1.9",
     "react": "^18.2.0",
+    "react-curved-text": "^3.0.1",
     "react-dom": "^18.2.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^6.0.0",
+    "react-svg-text": "^0.1.2",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "url-loader": "^4.1.1",
-    "jwt-decode": "^3.1.2"
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "tailwindcss": "^3.4.17",
     "vite": "^4.0.0",
     "vite-plugin-svgr": "^2.4.0"
   }
