--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "node": ">=18.x"
   },
   "dependencies": {
-    "@reach/router": "^1.3.4",
     "@react-oauth/google": "^0.12.1",
     "connect-ensure-login": "^0.1.1",
     "core-js": "^3.8.1",
@@ -35,6 +34,7 @@
     "react": "^18.2.0",
     "react-curved-text": "^3.0.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
     "react-oauth": "^0.0.1",
     "react-router": "^5.3.4",
     "react-router-dom": "^6.0.0",
@@ -46,6 +46,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
     "vite": "^4.0.0",
     "vite-plugin-svgr": "^2.4.0"
