--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "dotenv": "^16.0.3",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "framer-motion": "^12.0.1",
     "google-auth-library": "^6.1.6",
     "jwt-decode": "^3.1.2",
     "mongodb": "^6.12.0",
-    "mongoose": "^7.8.3",
+    "mongoose": "^8.9.5",
     "nodemon": "^3.1.9",
     "react": "^18.2.0",
     "react-curved-text": "^3.0.1",
