--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node": ">=18.x"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.7",
     "@react-oauth/google": "^0.12.1",
     "connect-ensure-login": "^0.1.1",
     "core-js": "^3.8.1",
