current state of game screen

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
     "connect-ensure-login": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "core-js": "^3.8.1",
     "dotenv": "^16.0.3",
     "express": "^4.21.2",
@@ -29,7 +30,7 @@
     "google-auth-library": "^6.1.6",
     "jwt-decode": "^3.1.2",
     "mongodb": "^6.12.0",
-    "mongoose": "^7.8.3",
+    "mongoose": "^8.9.5",
     "nodemon": "^3.1.9",
     "react": "^18.2.0",
     "react-curved-text": "^3.0.1",
