--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
     "@react-oauth/google": "^0.12.1",
+    "canvas-confetti": "^1.9.3",
     "connect-ensure-login": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "core-js": "^3.8.1",
