--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "node"
+    "start": "node server/server.js"
   },
   "repository": {
     "type": "git",
